# skill_hub

./: .gitignore  README.md
c++/: CMakeLists.txt
c++/cmake/Qt6/: Qt6.cmake
c++/cmake/common/: common.cmake  function.cmake  variable.cmake
c++/include/Qt6/QtCore/: qconfig.h
c++/include/mysql/: field_types.h  mariadb_version.h  my_command.h  my_compress.h  my_list.h  mysql_time.h  mysqld_error.h
c++/include/mysql/mysql/: udf_registration_types.h
c++/include/mysql/server/: mysql_version.h  mysqld_ername.h
c++/include/oyiou/: shader.h
c++/include/oyiou/data_structure/: data_structure.h
c++/include/oyiou/high_performance_server/: common.h
c++/include/oyiou/opengl_programing_guide/: common.h
c++/include/oyiou/primer/: primer.h
c++/include/oyiou/unix_manual/: apue.cpp  apue.h
c++/include/oyiou/vulkan_programing_guide/: vulkan_programing_guide.h
c++/lib/Qt6/lib/: Qt6Concurrent.prl  Qt6Core.prl  Qt6DBus.prl  Qt6DeviceDiscoverySupport.prl  Qt6EntryPoint.prl  Qt6FbSupport.prl  Qt6Gui.prl  Qt6Network.prl  Qt6OpenGL.prl  Qt6OpenGLWidgets.prl  Qt6PrintSupport.prl  Qt6Sql.prl  Qt6Test.prl  Qt6Widgets.prl  Qt6Xml.prl
c++/lib/Qt6/mkspecs/: qconfig.pri  qmodule.pri
c++/lib/Qt6/modules/: Concurrent.json  Core.json  DBus.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  FbSupportPrivate.json  Gui.json  Network.json  OpenGL.json  OpenGLWidgets.json  PrintSupport.json  Sql.json  Test.json  Widgets.json  Xml.json
c++/lib/glad/: CMakeLists.txt
c++/lib/mysql/: mariadbclient.lib  mysqlservices.lib
c++/lib/oyiou/: shader.cpp
c++/lib/oyiou/opengl_programing_guide/: gl3w.c  vdds.cpp
c++/res/learn_opengl/2.5_2-shader_class/: shader_class.frag
c++/res/learn_opengl/2.6_1-texture/: texture.frag
c++/res/learn_opengl/2.6_2-multi_texture/: multi_texture.frag  multi_texture.vert
c++/res/learn_opengl/2.8_1-coordinate_system/: coordinate_system.frag
c++/res/learn_opengl/2.8_2-coordinate_system_3D/: coordinate_system_3D.frag  coordinate_system_3D.vert
c++/res/learn_opengl/2.9_2-camera_keyboard_dt/: camera_keyboard_dt.frag  camera_keyboard_dt.vert
c++/res/opengl_learner_guide/3_1-colorful_triangle/: shader.frag  shader.vert
c++/res/opengl_learner_guide/3_2-colorful_square/: shader.frag  shader.vert
c++/res/opengl_learner_guide/4-texture_chartlet/: shader.frag  shader.vert
c++/res/opengl_learner_guide/5-texture_vary/: shader.frag  shader.vert
c++/res/opengl_learner_guide/6-3D_vary/: shader.vert
c++/res/opengl_learner_guide/7-keyboard_translate_camera/: shader.vert
c++/res/opengl_learner_guide/8-keyboard_square_light/: light.frag  shader.frag
c++/res/opengl_learner_guide/9-mouse_camera_scale/: light.vert  shader.vert
c++/res/opengl_programing_guide/1.2-triangles/: triangles.frag  triangles.vert
c++/res/opengl_programing_guide/10.1-sample_transmit_geometry_shader/: sample_transmit_geometry.vert
c++/res/opengl_programing_guide/10.2.1-gl_in/: gl_in.glsl
c++/res/opengl_programing_guide/10.2.3-gl_out/: gl_out.glsl
c++/res/opengl_programing_guide/10.3.2_1-fur_shader/: fur_draw.frag  (+1 more)
c++/src/: CMakeLists.txt
c++/src/algorithm_collection/: CMakeLists.txt
c++/src/common_data_structures/: CMakeLists.txt
c++/src/compile/: CMakeLists.txt
c++/src/data_structure/: CMakeLists.txt
c++/src/high_performance_server/: CMakeLists.txt
c++/src/learn_opengl/: CMakeLists.txt
c++/src/mysql_example/: CMakeLists.txt
c++/src/opengl_learner_guide/: CMakeLists.txt
c++/src/opengl_programing_guide/: CMakeLists.txt
c++/src/primer/: CMakeLists.txt
c++/src/qt6_dev_example/: CMakeLists.txt
c++/src/unix_manual/: CMakeLists.txt
c++/src/vulkan_programing_guide/: CMakeLists.txt
(+742 files in other folders)
