CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(c++ VERSION 1.0 DESCRIPTION "c++ project" LANGUAGES CXX C)
SET(CMAKE_CXX_STANDARD 14)

SET(CPP_DIR    ${CMAKE_CURRENT_SOURCE_DIR})
SET(CPP_SRC_DIR            ${CPP_DIR}/src)
SET(CPP_LIB_DIR            ${CPP_DIR}/lib)
SET(CPP_RES_DIR            ${CPP_DIR}/res)
SET(CPP_BIN_DIR            ${CPP_DIR}/bin)
SET(CPP_CMAKE_DIR          ${CPP_DIR}/cmake)
SET(CPP_INCLUDE_DIR        ${CPP_DIR}/include)
SET(CPP_CMAKE_COMMON_DIR   ${CPP_CMAKE_DIR}/common)

INCLUDE_DIRECTORIES(${CPP_INCLUDE_DIR})

FILE(GLOB CPP_CMAKE_FILES "${CPP_CMAKE_COMMON_DIR}/*.cmake")
FOREACH(SUB_CMAKE ${CPP_CMAKE_FILES})
    INCLUDE(${SUB_CMAKE})
ENDFOREACH(SUB_CMAKE)

EXISTS_FILE_SUB_PATHS(CPP_SUB_PROJ_DIRS ${CPP_LIB_DIR} CMakeLists.txt)
FOREACH(CPP_SUB_PROJ ${CPP_SUB_PROJ_DIRS})
    ADD_SUBDIRECTORY(${CPP_SUB_PROJ})
ENDFOREACH(CPP_SUB_PROJ)

ADD_SUBDIRECTORY(src)
